--- a/data/interfaces/enable_unit_dialog.ui
+++ b/data/interfaces/enable_unit_dialog.ui
@@ -60,6 +60,12 @@
                     <signal name="clicked" handler="clean_button_clicked" swapped="yes"/>
                   </object>
                 </child>
+                <child>
+                  <object class="GtkButton">
+                    <property name="label">test</property>
+                    <signal name="clicked" handler="file_bowser_clicked" swapped="yes"/>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
