--- a/data/interfaces/side_control_panel.ui
+++ b/data/interfaces/side_control_panel.ui
@@ -15,7 +15,7 @@
           <object class="AdwButtonContent">
             <property name="halign">start</property>
             <property name="icon-name">weather-tornado-symbolic</property>
-            <property name="label">Enable Unit</property>
+            <property name="label">Enable Unit File</property>
             <property name="tooltip-text">Send a signal to a process or a group of processes</property>
             <property name="use-underline">True</property>
           </object>
