--- a/data/interfaces/unit_list_search.ui
+++ b/data/interfaces/unit_list_search.ui
@@ -19,7 +19,7 @@
     </child>
     <child>
       <object class="GtkButton" id="clear_filters_button">
-        <property name="css-classes">destructive-action</property>
+        <property name="css-classes">flat</property>
         <property name="label">Clear Filters</property>
         <signal name="clicked" handler="clear_filter_clicked"/>
       </object>
