--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.0 -->
+<!-- Created with Cambalache 0.96.1 -->
 <interface>
   <!-- interface-name app_window.ui -->
   <requires lib="gio" version="2.0"/>
@@ -22,6 +22,10 @@
       <item>
         <attribute name="action">app.list_boots</attribute>
         <attribute name="label">List Boots</attribute>
+      </item>
+      <item>
+        <attribute name="action">app.signals</attribute>
+        <attribute name="label">Signals</attribute>
       </item>
     </section>
     <section>
