--- a/data/interfaces/signal_row.ui
+++ b/data/interfaces/signal_row.ui
@@ -1,18 +1,18 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.96.1 -->
-<!--ste-->
 <interface>
-  <!-- interface-description test -->
-  <!-- interface-copyright test -->
-  <!-- interface-authors test -->
-  <requires lib="gtk" version="4.12"/>
-  <object class="GtkBox">
+  <requires lib="gtk" version="4.18"/>
+  <template class="SIGNAL_ROW" parent="GtkBox">
+    <property name="height-request">12</property>
     <property name="spacing">5</property>
     <child>
-      <object class="GtkLabel" id="signal_type"/>
+      <object class="GtkLabel" id="signal_type">
+        <property name="width-request">120</property>
+        <property name="xalign">0.0</property>
+      </object>
     </child>
     <child>
       <object class="GtkLabel" id="signal_details"/>
     </child>
-  </object>
+  </template>
 </interface>
