--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -25,7 +25,7 @@
       </item>
       <item>
         <attribute name="action">app.signals</attribute>
-        <attribute name="label">Signals</attribute>
+        <attribute name="label">Watch Signals</attribute>
       </item>
     </section>
     <section>
