--- a/data/interfaces/unit_control_panel.ui
+++ b/data/interfaces/unit_control_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.0 -->
+<!-- Created with Cambalache 0.96.1 -->
 <interface>
   <!-- interface-name unit_control_panel.ui -->
   <requires lib="gtk" version="4.12"/>
@@ -13,7 +13,7 @@
         <property name="spacing">5</property>
         <child>
           <object class="GtkLabel">
-            <property name="label">Enabled:</property>
+            <property name="label" translatable="yes" context="info">Enabled:</property>
           </object>
         </child>
         <child>
@@ -41,7 +41,7 @@
             <child>
               <object class="AdwButtonContent">
                 <property name="icon-name">media-playback-start-symbolic</property>
-                <property name="label" translatable="yes">_Start</property>
+                <property name="label" translatable="yes" context="controls" comments="The start button">_Start</property>
                 <property name="use-underline">True</property>
               </object>
             </child>
@@ -90,7 +90,7 @@
             <child>
               <object class="AdwButtonContent">
                 <property name="icon-name">view-refresh</property>
-                <property name="label">Restart</property>
+                <property name="label" translatable="yes" context="controls">Restart</property>
               </object>
             </child>
           </object>
