--- a/data/interfaces/clean_dialog.ui
+++ b/data/interfaces/clean_dialog.ui
@@ -25,7 +25,7 @@
               <object class="GtkButton" id="clean_button">
                 <property name="css-classes">suggested-action</property>
                 <property name="halign">end</property>
-                <property name="label">Clean</property>
+                <property name="label" translatable="yes" context="button">Clean</property>
                 <property name="sensitive">False</property>
                 <signal name="clicked" handler="clean_button_clicked" swapped="yes"/>
               </object>
